Title Square added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             <a id="button" href="" lang="en">Download Cv</a>
         </nav>
     </header>
+    <main>
+        <section>
+            <h2 class="main_title" id="name">Jonathan Farias</h2>
+            <h2 class="main_title" id="sub">BackEnd Developer</h2>
+        </section>
+    </main>
+
 </body>
 
 </html>
