organize imports and components

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
     <title>Jonathan Farias</title>
 </head>
 
@@ -25,11 +26,13 @@
             <a id="button" href="" lang="en">Download Cv</a>
         </nav>
     </header>
-    <main>
+    <main class="banner">
         <section>
-            <h2 class="main_title" id="name">Jonathan Farias</h2>
-            <h2 class="main_title" id="sub">BackEnd Developer</h2>
+            <h1>Jonathan Farias</h1>
+            <h2>Backend Developer</h2>
         </section>
+        <a href="" id="button" class="download">Download CV</a>
+        <a href="" id="button" class="contatos">Contatos</a>
     </main>
 
 </body>
